[workspace]
members = [
    "crates/context",
    "crates/dirtree",
    "crates/dirtree-macros",
    "crates/kami",
    "crates/kuro",
    "crates/locenv",
    "crates/lua",
    "crates/module",
    "crates/reqmap",
    "crates/reqmap-macros",
    "crates/script",
    "crates/service",
    "crates/yaml"
]

default-members = ["crates/locenv"]
