[workspace]
members = [
    "crates/context",
    "crates/dirtree",
    "crates/dirtree-macros",
    "crates/kami",
    "crates/kuro",
    "crates/kuro-macros",
    "crates/locenv",
    "crates/lua",
    "crates/module",
    "crates/module-macros",
    "crates/reqmap",
    "crates/reqmap-macros",
    "crates/script",
    "crates/service",
    "crates/yaml"
]

default-members = ["crates/locenv"]
