[package]
name = "locenv"
version = "0.1.0"
edition = "2021"

[dependencies]
builder = { path = "../builder" }
clap = { version = "3.1", features = ["cargo"] }
config = { path = "../config" }
context = { path = "../context" }
manager = { path = "../manager" }
repository = { path = "../repository" }
serde_yaml = "0.8"
state = { path = "../state" }
