[package]
name = "locenv"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2", features = ["cargo"] }
config = { path = "../config" }
context = { path = "../context" }
manager = { path = "../manager" }
repository = { path = "../repository" }
script = { path = "../script" }
serde_yaml = "0.8"
state = { path = "../state" }
