[package]
name = "locenv"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2", features = ["cargo"] }
context = { path = "../context" }
module = { path = "../module" }
script = { path = "../script" }
service = { path = "../service" }
yaml = { path = "../yaml" }

[build-dependencies]
cc = "1.0"
