[package]
name = "locenv"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2", features = ["cargo"] }
context = { path = "../context" }
curl = "0.4"
dirtree = { path = "../dirtree" }
http = "0.2"
kami = { path = "../kami" }
kuro = { path = "../kuro" }
kuro-macros = { path = "../kuro-macros" }
module = { path = "../module" }
percent-encoding = "2.1"
reqmap-macros = { path = "../reqmap-macros" }
script = { path = "../script" }
serde = "1.0"
serde_json = "1.0"
service = { path = "../service" }
yaml = { path = "../yaml" }

[build-dependencies]
cc = "1.0"
