[package]
name = "module"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { path = "../config" }
context = { path = "../context" }
fmap = { path = "../fmap" }
fmap-macros = { path = "../fmap-macros" }
fs_extra = "1.2"
http = { path = "../http" }
serde = "1.0"
tempfile = "3.3"
zip = "0.6"
