[package]
name = "module"
version = "0.1.0"
edition = "2021"

[dependencies]
context = { path = "../context" }
dirtree = { path = "../dirtree" }
dirtree-macros = { path = "../dirtree-macros" }
fs_extra = "1.2"
http = { path = "../http" }
serde = "1.0"
tempfile = "3.3"
yaml = { path = "../yaml" }
zip = "0.6"
